feat: Add skeleton to feeds sidebar to prevent skipping
Signed-off-by: Felicitas Pojtinger <felicitas@pojtinger.com>

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -917,6 +917,10 @@ a.pf-v6-c-button.pf-m-primary,
   }
 }
 
+.twitterfeed__skeleton__stat {
+  width: 50px;
+}
+
 .giscus-frame {
   border-radius: var(--pf-t--global--border--radius--medium);
 }
